--- a/hotels/WebApps/HotelsSPA/src/app/identity/feature-authentication/login-form/login-form.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/identity/feature-authentication/login-form/login-form.component.html
@@ -8,7 +8,7 @@
 
     <div class="form-group">
         <label class="form-label">Password</label>
-        <input type="text" formControlName="password" class="form-control">
+        <input type="password" formControlName="password" class="form-control">
     </div>
 
     <button type="submit" class="btn btn-primary mt-3">Login</button>
