--- a/hotels/WebApps/HotelsSPA/src/app/app.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <h1>Hotels</h1>
+<app-navbar></app-navbar>
 
+<div class="container">
     <router-outlet></router-outlet>
 </div>
