[Frontend] Added home component

--- a/hotels/WebApps/HotelsSPA/src/app/ui-utils/navbar/navbar.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/ui-utils/navbar/navbar.component.html
@@ -1,32 +1,31 @@
 <nav class="navbar navbar-light bg-light" *ngIf="appState$ | async as appState">
-    <div class="containter-fluid">
-        <div class="d-flex">
-            <span class="navbar-brand mb-0 h1">{{ getNavBarTitle(appState) }}</span>
-
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-link" [routerLink]="['/listrooms']">Hotels&Rooms</a>
-                </li>
-                <li class="nav-item" *ngIf="canShowReservations(appState)">
-                    <a class="nav-link" [routerLink]="['/reservations']">My Reservations</a>
-                </li>
-                <li class="nav-item" *ngIf="canShowAdminPanel(appState)">
-                    <a class="nav-link" [routerLink]="['/admin']">Administrator Panel</a>
-                </li>
-            </ul>
-        </div>
-
+    <div class="container-fluid">
+      <div class="d-flex">
+        <span class="navbar-brand mb-0 h1">{{ getNavBarTitle(appState) }}</span>
+  
         <ul class="nav">
-            <li class="nav-item" *ngIf="userLoggedOut(appState)">
-                <a class="nav-link" [routerLink]="['/identity']">Login/Register</a>
-            </li>
-            <li class="nav-item" *ngIf="userLoggedIn(appState)">
-                <a class="nav-link" [routerLink]="['/identity', 'profile']">Guest profile</a>
-            </li>
-            <li class="nav-item"*ngIf="userLoggedIn(appState)">
-                <a class="nav-link" [routerLink]="['/identity', 'logout']">Logout</a>
-            </li>
+          <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/listrooms']">Hotels&Rooms</a>
+          </li>
+          <li class="nav-item" *ngIf="canShowReservations(appState)">
+            <a class="nav-link" [routerLink]="['/reservations']">My Reservations</a>
+          </li>
+          <li class="nav-item" *ngIf="canShowAdminPanel(appState)">
+            <a class="nav-link" [routerLink]="['/admin']">Administrator Panel</a>
+          </li>
         </ul>
+      </div>
+  
+      <ul class="nav">
+        <li class="nav-item" *ngIf="userLoggedOut(appState)">
+          <a class="nav-link" [routerLink]="['/identity']">Login/Register</a>
+        </li>
+        <li class="nav-item" *ngIf="userLoggedIn(appState)">
+          <a class="nav-link" [routerLink]="['/identity', 'profile']">User profile</a>
+        </li>
+        <li class="nav-item" *ngIf="userLoggedIn(appState)">
+          <a class="nav-link" [routerLink]="['/identity', 'logout']">Logout</a>
+        </li>
+      </ul>
     </div>
-</nav>
-
+  </nav>
