--- a/hotels/WebApps/HotelsSPA/src/app/ui-utils/navbar/navbar.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/ui-utils/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/listrooms']">Hotels&Rooms</a>
+            <a class="nav-link" [routerLink]="['']">Home</a>
           </li>
           <li class="nav-item" *ngIf="canShowReservations(appState)">
             <a class="nav-link" [routerLink]="['/reservations']">My Reservations</a>
