Added check if application should display admin panel

--- a/hotels/WebApps/HotelsSPA/src/app/ui-utils/navbar/navbar.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/ui-utils/navbar/navbar.component.html
@@ -10,7 +10,7 @@
           <li class="nav-item" *ngIf="canShowReservations(appState)">
             <a class="nav-link" [routerLink]="['/reservations']">My Reservations</a>
           </li>      
-          <div class="dropdown">
+          <div class="dropdown" *ngIf="canShowAdminPanel(appState)">
             <a class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
               Administrator Panel
             </a>
