--- a/hotels/WebApps/HotelsSPA/src/app/admin/components/check-in-user/check-in-user.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/admin/components/check-in-user/check-in-user.component.html
@@ -4,8 +4,8 @@
     <button (click)="getReservations()" class="button">Search</button>
   </div>
 
-  <div *ngIf="loading">Loading...</div>
-  <div *ngIf="error">{{ error }}</div>
+  <div class="container" *ngIf="loading">Loading...</div>
+  <div class="container" *ngIf="error">{{ error }}</div>
   <div *ngIf="!loading && !error">
     <div class="stays-container">
       <div *ngFor="let reservation of reservations ?? []">
