--- a/hotels/WebApps/HotelsSPA/src/app/admin/components/hotel-stay/hotel-stay.component.css
+++ b/hotels/WebApps/HotelsSPA/src/app/admin/components/hotel-stay/hotel-stay.component.css
@@ -18,6 +18,7 @@ body {
 .container label {
     font-size: 16px;
     color: #333333;
+    padding-top: 5px;
 }
 
 .container input[type="text"] {
@@ -32,6 +33,7 @@ body {
 .container button {
     background-color: #0d6efd;
     color: white;
+    margin-top: 5px;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
