Added css style to components

--- a/hotels/WebApps/HotelsSPA/src/app/identity/feature-user-info/user-profile/user-profile.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/identity/feature-user-info/user-profile/user-profile.component.html
@@ -1,24 +1,30 @@
-<h3> Your Information </h3>
+<div class="container">
 
-<div *ngIf="appState$ | async as appState">
-    <table class ="table table-stripped table-bordered" *ngIf="!appState.isEmpty(); else notLoggedIn">
-        <tbody>
-            <tr>
-                <td class="table-active">Username</td>
-                <td> {{ appState.username }} </td>
-            </tr>
-            <tr>
-                <td class="table-active">Email</td>
-                <td> {{ appState.email }} </td>
-            </tr>
-            <tr>
-                <td class="table-active">Name</td>
-                <td> {{ appState.firstName }}  {{ appState?.lastName }} </td>
-            </tr>
-        </tbody>
-    </table>
 
-    <ng-template #notLoggedIn>
-        <p> Please <a [routerLink]="['/identity', 'login']"> login </a> to see Your information.</p>
-    </ng-template>
+
+    <h3> Your Information </h3>
+
+    <div *ngIf="appState$ | async as appState">
+        <table class="table table-stripped table-bordered" *ngIf="!appState.isEmpty(); else notLoggedIn">
+            <tbody>
+                <tr>
+                    <td class="table-active">Username</td>
+                    <td> {{ appState.username }} </td>
+                </tr>
+                <tr>
+                    <td class="table-active">Email</td>
+                    <td> {{ appState.email }} </td>
+                </tr>
+                <tr>
+                    <td class="table-active">Name</td>
+                    <td> {{ appState.firstName }} {{ appState?.lastName }} </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <ng-template #notLoggedIn>
+            <p> Please <a [routerLink]="['/identity', 'login']"> login </a> to see Your information.</p>
+        </ng-template>
+    </div>
+
 </div>
