--- a/hotels/WebApps/HotelsSPA/src/app/identity/feature-authentication/login-form/login-form.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/identity/feature-authentication/login-form/login-form.component.html
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h3>Log in</h3>
 
 <form [formGroup]="loginForm" (ngSubmit)="onLoginFormSubmit()">
@@ -13,3 +15,5 @@
 
     <button type="submit" class="btn btn-primary mt-3">Login</button>
 </form>
+
+</div>
