--- a/hotels/WebApps/HotelsSPA/src/app/identity/feature-authentication/register/register-hotel/register-hotel.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/identity/feature-authentication/register/register-hotel/register-hotel.component.html
@@ -1,33 +1,35 @@
-<form [formGroup]="registerHotelForm" (ngSubmit)="onRegisterHotelFormSubmit()">
-    <div class="form-group">
-        <label class="form-label">First Name</label>
-        <input type="text" formControlName="firstName" class="form-control">
-    </div>
+<div class="container">
+    <form [formGroup]="registerHotelForm" (ngSubmit)="onRegisterHotelFormSubmit()">
+        <div class="form-group">
+            <label class="form-label">First Name</label>
+            <input type="text" formControlName="firstName" class="form-control">
+        </div>
 
-    <div class="form-group">
-        <label class="form-label">Last Name</label>
-        <input type="text" formControlName="lastName" class="form-control">
-    </div>
+        <div class="form-group">
+            <label class="form-label">Last Name</label>
+            <input type="text" formControlName="lastName" class="form-control">
+        </div>
 
-    <div class="form-group">
-        <label class="form-label">Username</label>
-        <input type="text" formControlName="username" class="form-control">
-    </div>
+        <div class="form-group">
+            <label class="form-label">Username</label>
+            <input type="text" formControlName="username" class="form-control">
+        </div>
 
-    <div class="form-group">
-        <label class="form-label">Password</label>
-        <input type="password" formControlName="password" class="form-control">
-    </div>
+        <div class="form-group">
+            <label class="form-label">Password</label>
+            <input type="password" formControlName="password" class="form-control">
+        </div>
 
-    <div class="form-group">
-        <label class="form-label">Email</label>
-        <input type="text" formControlName="email" class="form-control">
-    </div>
+        <div class="form-group">
+            <label class="form-label">Email</label>
+            <input type="text" formControlName="email" class="form-control">
+        </div>
 
-    <div class="form-group">
-        <label class="form-label">Phone Number</label>
-        <input type="text" formControlName="phoneNumber" class="form-control">
-    </div>
+        <div class="form-group">
+            <label class="form-label">Phone Number</label>
+            <input type="text" formControlName="phoneNumber" class="form-control">
+        </div>
 
-    <button type="submit" class="btn btn-primary mt-3">Register</button>
-</form>
+        <button type="submit" class="btn btn-primary mt-3">Register</button>
+    </form>
+</div>
