--- a/hotels/WebApps/HotelsSPA/src/app/identity/feature-authentication/register/register.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/identity/feature-authentication/register/register.component.html
@@ -1,9 +1,10 @@
-<ul class="nav flex-column">
-    <li class="nav-item">
-        <a class="nav-link" [routerLink]="['register-guest']">Register As Guest</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" [routerLink]="['register-hotel']">Register As Hotel</a>
-    </li>
-</ul>
-
+<div class="container">
+    <ul class="nav flex-column">
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['register-guest']">Register As Guest</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['register-hotel']">Register As Hotel</a>
+        </li>
+    </ul>
+</div>
