--- a/hotels/WebApps/HotelsSPA/src/app/identity/identity.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/identity/identity.component.html
@@ -1,13 +1,14 @@
-<h1>Welcome!</h1>
+<div class="container">
+    <h1>Welcome!</h1>
 
-<p>In order to search and book, you need to have an account.</p>
+    <p>In order to search and book, you need to have an account.</p>
 
-<ul class="nav flex-column">
-    <li class="nav-item">
-        <a class="nav-link" [routerLink]="['login']">Login</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" [routerLink]="['register']">Register</a>
-    </li>
-</ul>
-
+    <ul class="nav flex-column">
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['login']">Login</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['register']">Register</a>
+        </li>
+    </ul>
+</div>
