--- a/hotels/WebApps/HotelsSPA/src/app/rating/rating/components/hotel-stay/hotel-stay.component.css
+++ b/hotels/WebApps/HotelsSPA/src/app/rating/rating/components/hotel-stay/hotel-stay.component.css
@@ -1,14 +1,20 @@
-.rating-container {    
-    max-width: 400px;
-    margin: 20px auto 20px 0;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
-    text-align: center;
+body {
     font-family: Arial, sans-serif;
+    background-color: #ffffff;
+    margin: 0;
+    padding: 20px;
 }
+
+.rating-container {
+    background-color: #F8F9FA;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    margin: 20px;
+    max-width: 400px;
+}
+
 
 .rating-container h2 {
     margin-bottom: 20px;
@@ -27,17 +33,17 @@ textarea {
 }
 
 button {
+    background-color: #0d6efd;
+    color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
-    background-color: #4CAF50;
-    color: white;
     cursor: pointer;
     font-size: 16px;
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #094bad;
 }
 
 .star-rating {
