--- a/hotels/WebApps/HotelsSPA/src/app/ui-utils/navbar/navbar.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/ui-utils/navbar/navbar.component.html
@@ -8,7 +8,7 @@
             <a class="nav-link" [routerLink]="['']">Home</a>
           </li>
           <li class="nav-item" *ngIf="canShowReservations(appState)">
-            <a class="nav-link" [routerLink]="['/reservations']">My Reservations</a>
+            <a class="nav-link" [routerLink]="['/reservations', 'list-reservations']">My Reservations</a>
           </li>      
           <div class="dropdown" *ngIf="canShowAdminPanel(appState)">
             <a class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
