--- a/hotels/WebApps/HotelsSPA/src/app/reservations/feature-add-cancel-reservation/create-reservation-form/create-reservation-form.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/reservations/feature-add-cancel-reservation/create-reservation-form/create-reservation-form.component.html
@@ -1,49 +1,49 @@
 <div class="container">
 
-<h3>Reserve Your Room</h3>
-    
-<form [formGroup]="createReservationForm" (ngSubmit)="onCreateReservationSubmit()">
-    <div class="form-group">
-        <label class="form-label">Reservation ID</label>
-        <input type="text" formControlName="id" class="form-control">
-    </div>
+    <h3>Reserve Your Room</h3>
 
-    <div class="form-group">
-        <label class="form-label">Username</label>
-        <input type="text" formControlName="userId" class="form-control">
-    </div>
+    <form [formGroup]="createReservationForm" (ngSubmit)="onCreateReservationSubmit()">
+        <div class="form-group">
+            <label class="form-label">Reservation ID</label>
+            <input type="text" formControlName="id" class="form-control" readonly>
+        </div>
 
-    <div class="form-group">
-        <label class="form-label">Hotel ID</label>
-        <input type="text" formControlName="hotelId" class="form-control">
-    </div>
+        <div class="form-group">
+            <label class="form-label">Username</label>
+            <input type="text" formControlName="userId" class="form-control" readonly>
+        </div>
 
-    <div class="form-group">
-        <label class="form-label">Hotel Name</label>
-        <input type="text" formControlName="hotelName" class="form-control">
-    </div>
+        <div class="form-group">
+            <label class="form-label">Hotel ID</label>
+            <input type="text" formControlName="hotelId" class="form-control" readonly>
+        </div>
 
-    <div class="form-group">
-        <label class="form-label">Room ID</label>
-        <input type="text" formControlName="roomId" class="form-control">
-    </div>
+        <div class="form-group">
+            <label class="form-label">Hotel Name</label>
+            <input type="text" formControlName="hotelName" class="form-control" readonly>
+        </div>
 
-    <div class="form-group">
-        <label class="form-label">Booking Date And Time</label>
-        <input type="text" formControlName="bookingDateTime" class="form-control">
-    </div>
+        <div class="form-group">
+            <label class="form-label">Room ID</label>
+            <input type="text" formControlName="roomId" class="form-control" readonly>
+        </div>
 
-    <div class="form-group">
-        <label class="form-label">Start Date And Time</label>
-        <input type="text" formControlName="startDateTime" class="form-control">
-    </div>
+        <div class="form-group">
+            <label class="form-label">Booking Date And Time</label>
+            <input type="text" formControlName="bookingDateTime" class="form-control" readonly>
+        </div>
 
-    <div class="form-group">
-        <label class="form-label">End Date And Time</label>
-        <input type="text" formControlName="endDateTime" class="form-control">
-    </div>
-    
-    <button type="submit" class="btn btn-primary mt-3">Confirm</button>
+        <div class="form-group">
+            <label class="form-label">Start Date And Time</label>
+            <input type="text_editable" formControlName="startDateTime" class="form-control">
+        </div>
+
+        <div class="form-group">
+            <label class="form-label">End Date And Time</label>
+            <input type="text_editable" formControlName="endDateTime" class="form-control">
+        </div>
+
+        <button type="submit" class="btn btn-primary mt-3">Confirm</button>
     </form>
-    
+
 </div>
