--- a/hotels/WebApps/HotelsSPA/src/app/rating/rating/rating.component.css
+++ b/hotels/WebApps/HotelsSPA/src/app/rating/rating/rating.component.css
@@ -2,3 +2,13 @@
     display: flex; /* Use Flexbox */
     gap: 30px
 }
+
+.container {
+    background-color: #F8F9FA;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: left;
+    margin: 20px;
+    max-width: 400px;
+}
