--- a/hotels/WebApps/HotelsSPA/src/app/identity/feature-authentication/logout/logout.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/identity/feature-authentication/logout/logout.component.html
@@ -1,1 +1,3 @@
-<h4 *ngIf="logoutSuccess$ | async as logoutSuccess"> Logout {{ logoutSuccess ? "" : "un" }}successful.</h4>
+<div class="container">
+    <h4 *ngIf="logoutSuccess$ | async as logoutSuccess"> Logout {{ logoutSuccess ? "" : "un" }}successful.</h4>
+</div>
