--- a/hotels/WebApps/HotelsSPA/src/app/ui-utils/home/home.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/ui-utils/home/home.component.html
@@ -2,6 +2,6 @@
     <div class="container">
         <h1 class="display-4 text-white">Welcome to Hotel Room Reservations</h1>
         <p class="lead text-white">Find and reserve the perfect room for your stay.</p>
-        <a class="btn btn-primary btn-lg" [routerLink]="['/listrooms']">Browse Rooms</a>
+        <a class="btn btn-primary btn-lg" [routerLink]="['/managingrooms']">Browse Rooms</a>
     </div>
 </section>
