Frontend and backend connection established

--- a/hotels/WebApps/HotelsSPA/src/app/admin/components/managingrooms/managingrooms.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/admin/components/managingrooms/managingrooms.component.html
@@ -35,7 +35,7 @@
       <h3>{{ hotel.name }}</h3>
       <p>{{ hotel.address }}, {{ hotel.city }}, {{ hotel.country }}</p>
       <p>{{ hotel.description }}</p>
-      <button (click)="updateHotel(hotel)">Update</button>
+      <!--<button (click)="updateHotel(hotel)">Update</button>-->
       <button (click)="deleteHotel(hotel.id)">Delete</button>
     </div>
     <button (click)="addHotel()">Add Hotel</button>
