--- a/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-hotels/client-hotels.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-hotels/client-hotels.component.html
@@ -14,7 +14,7 @@
               <div class="card-body">
                 <h5 class="card-title">{{ hotel.name }}</h5>
                 <p class="card-text">{{ hotel.description }}</p>
-                <label class="btn btn-primary" (click)="goToRoomComponent(hotel.id)">Rooms</label>
+                <label class="btn btn-primary" [routerLink]="['/client-rooms']">Rooms</label>
                 <a [routerLink]="['/reservations', hotel.id]" class="btn btn-primary">Reserve</a>
               </div>
             </div>
