--- a/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-hotels/client-hotels.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-hotels/client-hotels.component.html
@@ -10,7 +10,7 @@
         <div class="column">
           <div class="col-md-4" *ngFor="let hotel of hotels">
             <div class="card mb-4 shadow-sm">
-              <img [src]="hotel.fileImages" class="card-img-top" alt="{{ hotel.name }}">
+              <img [src]="hotel.fileimages" class="card-img-top" alt="{{ hotel.name }}">
               <div class="card-body">
                 <h5 class="card-title">{{ hotel.name }}</h5>
                 <p class="card-text">{{ hotel.description }}</p>
