--- a/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-rooms/client-rooms.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-rooms/client-rooms.component.html
@@ -1,1 +1,28 @@
-<p>client-rooms works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div class="container my-5">
+        <div class="column">
+          <div class="col-md-4" *ngFor="let hotel of hotels">
+            <div class="card mb-4 shadow-sm">
+              <img [src]="room.fileimages" class="card-img-top" alt="{{ hotel.name }}">
+              <div class="card-body">
+                <h5 class="card-title">{{ hotel.name }}</h5>
+                <p class="card-text">{{ room.description }}</p>
+                <a [routerLink]="['/reservations', hotel.id]" class="btn btn-primary">Reserve</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    
+        
+   
+</body>
+</html>
+
