--- a/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-rooms/client-rooms.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-rooms/client-rooms.component.html
@@ -6,19 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container my-5">
-        <div class="column">
-          <div class="col-md-4" *ngFor="let room of rooms">
-            <div class="card mb-4 shadow-sm">
-              <img [src]="room.fileimages" class="card-img-top">
-              <div class="card-body">
-                <p class="card-text">{{ room.description }}</p>
-                <button class="btn btn-primary" (click)="goToReservationsComponent(room.id)">Reserve</button>
-              </div>
-            </div>
+    <div class="content">
+      <div class="room" *ngFor="let room of rooms">
+          <img [src]="room.fileimages" class="card-img-top">
+          <div class="card-body">
+            <p class="card-text">{{ room.description }}</p>
+            <button class="btn btn-primary" (click)="goToReservationsComponent(room.id)">Reserve</button>
           </div>
-        </div>
       </div>
+    </div>
     
         
    
