Added add-hotel.component and update-hotel.component in admin module

--- a/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-hotels/client-hotels.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-hotels/client-hotels.component.html
@@ -12,7 +12,9 @@
       <div >
         <h5 >{{ hotel.name }}</h5>
         <p >{{ hotel.description }}</p>
-        <label class="btn btn-primary" (click)="goToRoomComponent(hotel.id)">Rooms</label>
+        <label class="btn btn-primary" (click)="goToRoomComponent(hotel.id)">View rooms</label>
+        <!-- <a class="btn btn-primary btn-lg" [routerLink]="['/rating/show-reviews/hotel.id']">Browse Rooms</a> -->
+        <!-- <label class="btn btn-primary" (click)="goToRatingComponent(hotel.id)">View rating</label> -->
       </div>
     </div>
   </div>
