--- a/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-rooms/client-rooms.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-rooms/client-rooms.component.html
@@ -8,9 +8,11 @@
 <body>
     <div class="content">
       <div class="room" *ngFor="let room of rooms">
-          <img [src]="room.fileimages" class="card-img-top">
+          <img [src]="room.fileimages">
           <div class="card-body">
-            <p class="card-text">{{ room.description }}</p>
+            <p>{{ room.description }}</p>
+            <p>{{ room.price }} per night</p>
+            <p>{{ room.status }}</p>
             <button class="btn btn-primary" (click)="goToReservationsComponent(room.id)">Reserve</button>
           </div>
       </div>
