--- a/hotels/WebApps/HotelsSPA/src/app/ui-utils/navbar/navbar.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/ui-utils/navbar/navbar.component.html
@@ -17,7 +17,7 @@
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
               <li><a class="dropdown-item" [routerLink]="['/admin/checkin']">Check in guest</a></li>
               <li><a class="dropdown-item" [routerLink]="['/admin/checkout']">Check out guest</a></li>
-              <li><a class="dropdown-item" [routerLink]="['/admin/managingrooms']">Hotels managing</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/admin/admin-managingrooms']">Hotels managing</a></li>
             </ul>
           </div>          
           <li class="nav-item" *ngIf="canShowRatingPanel(appState)">
