--- a/hotels/WebApps/HotelsSPA/src/app/admin/components/update-hotel/update-hotel.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/admin/components/update-hotel/update-hotel.component.html
@@ -6,45 +6,45 @@
     <!-- <form [formGroup]="hotelForm" (ngSubmit)="UpdateHotel()"> -->
         <div class="form-group">
             <label class="form-label">Hotel Id</label>
-            <input type="text" formControlName="id" class="form-control">
+            <input type="text" formControlName="id">
         </div>
     
         <div class="form-group">
             <label class="form-label">Hotel Name</label>
-            <input type="text" formControlName="name" class="form-control">
+            <input type="text" formControlName="name">
         </div>
 
         <div class="form-group">
             <label class="form-label">Hotel Address</label>
-            <input type="text" formControlName="address" class="form-control">
+            <input type="text" formControlName="address">
         </div>
 
         <div class="form-group">
             <label class="form-label">City</label>
-            <input type="text" formControlName="city" class="form-control">
+            <input type="text" formControlName="city">
         </div>
 
         <div class="form-group">
             <label class="form-label">Country</label>
-            <input type="text" formControlName="country" class="form-control">
+            <input type="text" formControlName="country">
         </div>
 
         <div class="form-group">
             <label class="form-label">Hotel Images</label>
-            <input type="text" formControlName="name" class="form-control">
+            <input type="text" formControlName="name">
         </div>
 
         <div class="form-group">
             <label class="form-label">Rooms</label>
-            <input type="text" formControlName="rooms" class="form-control">
+            <input type="text" formControlName="rooms">
         </div>
 
         <div class="form-group">
             <label class="form-label">Hotel Description</label>
-            <input type="text" formControlName="description" class="form-control">
+            <input type="text" formControlName="description">
         </div>
     
-        <button type="submit" class="btn btn-primary mt-3">Create</button>
+        <button type="submit" class="btn btn-primary mt-3">Update</button>
     <!-- </form> -->
     
 </div>
