--- a/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-rooms/client-rooms.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-rooms/client-rooms.component.html
@@ -13,7 +13,7 @@
             <p>{{ room.description }}</p>
             <p>{{ room.price }} per night</p>
             <p>{{ room.status }}</p>
-            <!-- <a class="btn btn-primary btn-lg" [routerLink]="['/reservations/create-reservation-form', room.hotelid]">Reserve</a> -->
+            <!-- <a class="btn btn-primary btn-lg" [routerLink]="['/reservations/create-reservation/', room.hotelid, hotel.name, room.id]">Reserve</a> -->
             <button class="btn btn-primary" (click)="goToReservationsComponent(room.id)">Reserve</button>
           </div>
       </div>
