--- a/hotels/WebApps/HotelsSPA/src/app/admin/components/add-hotel/add-hotel.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/admin/components/add-hotel/add-hotel.component.html
@@ -5,32 +5,32 @@
     <!-- <form [formGroup]="hotelForm" (ngSubmit)="onAddHotelFormSubmit()"> -->
         <div class="form-group">
             <label class="form-label">Hotel Id</label>
-            <input type="text" [ngModel]="hotelId">
+            <input type="text" [(ngModel)]="hotelId">
         </div>
     
         <div class="form-group">
             <label class="form-label">Hotel Name</label>
-            <input type="text" [ngModel]="Name">
+            <input type="text" [(ngModel)]="Name">
         </div>
 
         <div class="form-group">
             <label class="form-label">Hotel Address</label>
-            <input type="text"  [ngModel]="Address">
+            <input type="text" [(ngModel)]="Address">
         </div>
 
         <div class="form-group">
             <label class="form-label">City</label>
-            <input type="text" [ngModel]="City">
+            <input type="text" [(ngModel)]="City">
         </div>
 
         <div class="form-group">
             <label class="form-label">Country</label>
-            <input type="text" [ngModel]="Country">
+            <input type="text" [(ngModel)]="Country">
         </div>
 
         <div class="form-group">
             <label class="form-label">Hotel Images</label>
-            <input type="file"  [ngModel]="hotelFileImages">
+            <input type="file"  [(ngModel)]="hotelFileImage">
         </div>
 
         <!-- <div class="form-group">
@@ -67,7 +67,7 @@
 
         <div class="form-group">
             <label class="form-label">Room Images</label>
-            <input type="file"  [(ngModel)]="roomFileImages">
+            <input type="file"  [(ngModel)]="roomFileImage">
         </div>
 
         <div class="form-group">
