--- a/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-hotels/client-hotels.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-hotels/client-hotels.component.html
@@ -12,7 +12,7 @@
       <div >
         <h5 >{{ hotel.name }}</h5>
         <!--<p >{{ hotel.description }}</p>-->
-        <label class="btn btn-primary btn-lg" (click)="goToRoomComponent(hotel.id)">View rooms</label>
+        <label class="btn btn-primary btn-lg" (click)="goToRoomComponent(hotel.id, hotel.name)">View rooms</label>
         <a class="btn btn-primary btn-lg" [routerLink]="['/rating/show-reviews', hotel.id]">View rating</a>
         <!-- <label class="btn btn-primary" (click)="goToRatingComponent(hotel.id)">View rating</label> -->
       </div>
