--- a/hotels/WebApps/HotelsSPA/src/app/admin/components/add-hotel/add-hotel.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/admin/components/add-hotel/add-hotel.component.html
@@ -65,17 +65,24 @@
             <input type="text" [(ngModel)]="roomPrice">
         </div>
 
-        <div class="form-group">
+        <div class="form-group" style="display: flex; flex-direction: column; gap: 5px;">
             <label class="form-label">Room Images</label>
-            <input type="file"  [(ngModel)]="roomFileImage">
+            <div style="display: flex; flex-direction: row; align-items: center;">
+                <input type="file"  [(ngModel)]="roomFileImage">
+                <button class="btn btn-primary mt-3" (click)="addImageToRoomsImages()">Add Image</button>
+            </div>
+            
         </div>
 
         <div class="form-group">
             <label class="form-label">Room Description</label>
             <input type="text"  [(ngModel)]="roomDescription">
         </div>
-    
-        <button type="submit" (click)="addRoomToList()" class="btn btn-primary mt-3">Add to hotel</button>
+        
+        <div style="display: flex; flex-direction: row; gap: 10px;">
+            <button type="submit" (click)="addRoomToList()" class="btn btn-primary mt-3">Add to hotel</button>
+            <button type="submit" (click)="clearAllRooms()" class="btn btn-primary mt-3">Clear rooms</button>
+        </div>
     <!-- </form> -->
     </div>
 </div>
