--- a/hotels/WebApps/HotelsSPA/src/app/admin/components/admin-managingrooms/admin-managingrooms.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/admin/components/admin-managingrooms/admin-managingrooms.component.html
@@ -6,69 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-  <div class="content">
+  <div class="container">
     <h2>Hotel List</h2>
     <div class="hotel" *ngFor="let hotel of hotels">
-      <img [src]="hotel.fileImages" alt="{{ hotel.name }}">
-      <div >
-        <h5 >{{ hotel.name }}</h5>
-        <!-- <p >{{ hotel.description }}</p> -->
-        <label class="btn btn-primary" (click)="deleteHotel(hotel.id)">Delete hotel</label>
-        <a class="btn btn-primary" [routerLink]="['/update-hotel']">Update hotel</a>
-        <!-- <a class="btn btn-primary btn-lg" [routerLink]="['/rating/show-reviews/hotel.id']">View rating</a> -->
-        <!-- <label class="btn btn-primary" (click)="goToRatingComponent(hotel.id)">View rating</label> -->
+      <div class="hotelDescription" >
+        <h5 >{{hotel.name}}</h5>
+        <label>{{hotel.address}}, {{hotel.city}}, {{hotel.country}}</label>
+        <div style="display: flex; flex-direction: row; gap: 10px;">
+          <button class="btn btn-primary" (click)="deleteHotel(hotel.id)">Delete hotel</button>
+          <button class="btn btn-primary" (click)="updateHotel(hotel)">Update hotel</button>
+        </div>
       </div>
+      <img [src]="hotel.fileImages[0]" alt="" style="width: 200px; height: 200px; margin-left: auto;">
     </div>
     <a class="btn btn-primary btn-lg" [routerLink]="['/add-hotel']">Add hotel</a>
   </div>
-     
-        
-   
 </body>
 </html>
 
-
-
-<!-- <div>
-    <h2>Hotel List</h2>
-    <ul>
-      <li *ngFor="let hotel of hotels">
-        <a [routerLink]="['/hotels', hotel.id]">{{ hotel.name }}</a>
-        <button (click)="deleteHotel(hotel.id)">Delete</button>
-      </li>
-    </ul>
-    <button routerLink="/hotels/new">Add Hotel</button>
-  </div>
-   -->
-
-   <!-- <div>
-    <h2>Hotel List</h2>
-    <ul>
-      <li *ngFor="let hotel of hotels">
-        <input [(ngModel)]="hotel.name" placeholder="Name">
-        <input [(ngModel)]="hotel.address" placeholder="Address">
-        <button (click)="updateHotel(hotel)">Update</button>
-        <button (click)="deleteHotel(hotel.id)">Delete</button>
-      </li>
-    </ul>
-    <div>
-      <h3>Add New Hotel</h3>
-      <input [(ngModel)]="newHotel.name" placeholder="Name">
-      <input [(ngModel)]="newHotel.address" placeholder="Address">
-      <button (click)="addHotel()">Add</button>
-    </div>
-  </div> -->
-
-  <!-- <div>
-    <h2>Hotel List</h2>
-    <div *ngFor="let hotel of hotels" class="hotel-card">
-      <img [src]="hotel.fileImages[0]" alt="{{ hotel.name }}" class="hotel-image">
-      <h3>{{ hotel.name }}</h3>
-      <p>{{ hotel.address }}, {{ hotel.city }}, {{ hotel.country }}</p>
-      <p>{{ hotel.description }}</p>
-      <button (click)="updateHotel(hotel)">Update</button>
-      <button (click)="deleteHotel(hotel.id)">Delete</button>
-    </div>
-    <button (click)="addHotel()">Add Hotel</button>
-  </div> -->
   
