--- a/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-rooms/client-rooms.component.html
+++ b/hotels/WebApps/HotelsSPA/src/app/managingrooms/feature-managingrooms/client-rooms/client-rooms.component.html
@@ -6,21 +6,43 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="content">
+    <div class="container">
+      <h2> Room List </h2>
       <div class="room" *ngFor="let room of rooms">
-          <img [src]="room.fileimages">
-          <div class="card-body">
-            <p>{{ room.description }}</p>
-            <p>{{ room.price }} per night</p>
-            <p>{{ room.status }}</p>
-            <a class="btn btn-primary btn-lg" [routerLink]="['/reservations/create-reservation/', hotelId, hotelName, room.id]">Reserve</a>
-            <!-- <button class="btn btn-primary" (click)="goToReservationsComponent(room.id)">Reserve</button> -->
+        
+          <div class="roomDescription">
+            <div class="card-body">
+              <label style="font-size: 20px;">Room description:</label>
+              <label>{{room.description}}</label>
+              <label style="margin-top: 10px; font-size: 22px;">Price: {{ room.price }} per night</label>
+              <div style="display: flex; flex-direction: row; gap: 10px;"></div>
+              <div style="margin-top: auto; display: flex; flex-direction: column; gap: 5px;" *ngIf="!room.status">
+                <button class="btn btn-primary btn-lg" style="width: 150px;" [routerLink]="['/reservations/create-reservation/', hotelId, hotelName, room.id]">Reserve</button>
+              </div>
+              <div style="margin-top: auto; display: flex; flex-direction: column; gap: 5px;" *ngIf="room.status">
+                <label style="font-size: 16px; color: rgb(248, 123, 123);">This room is currently unavailable</label>
+                <button class="btn btn-primary btn-lg" style="width: 150px;" disabled [routerLink]="['/reservations/create-reservation/', hotelId, hotelName, room.id]">Reserve</button>
+              </div>
+                
+            </div>
           </div>
+          <img [src]="room.fileImages[0]" (click)="openImages(room)" style="width: 200px; height: 200px; margin-left: auto; cursor: pointer;"/>
+        
+        
       </div>
     </div>
     
-        
-   
+    <div class="popUpBackground" id="popUpDiv">
+      <div class="popUpContent">
+        <button class="btn btn-primary btn-lg" style="width: 100px; margin-left: auto;" (click)="closePopUp()" >Close</button>
+        <div *ngFor="let image of popUpRoom.fileImages">
+          <img width="1000px" height="500px" [src]="image"/>
+        </div>
+      </div>
+    </div>
+  
+     
 </body>
 </html>
+
 
